# SPWN-language

./: Cargo.toml  rustfmt.toml  test.spwn
src/: error.rs  main.rs  session.rs  source.rs
src/bytecode/: constant.rs  debug.rs  mod.rs  opcode.rs  opcodes.rs
src/compiler/: error.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  util.rs
src/compiler/builder/: mod.rs  proto.rs
src/errors/: diagnostic.rs  emitter.rs  mod.rs  suggestion.rs
src/gd/: ids.rs  mod.rs
src/lexer/: error.rs  mod.rs  token.rs  tokens.rs
src/parser/: error.rs  expr.rs  exprs.rs  mod.rs  operators.rs  pattern.rs  patterns.rs  stmt.rs  stmts.rs  util.rs
src/parser/ast/: expr.rs  mod.rs  pattern.rs  stmt.rs
src/util/: deprecated.rs  interner.rs  mod.rs  slabmap.rs  unique_register.rs
src/vm/: context.rs  error.rs  memory.rs  mod.rs  multi.rs  value.rs  value_ops.rs
