[package]
name = "spwn-language"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
colored = "2.0.4"
itertools = "0.12.0"
lyneate = "0.2.1"
widestring = { git = "https://github.com/FlowVix/widestring-rs" }
derive_more = "0.99.17"
paste = "1.0.14"
lasso = "0.7.2"
delve = { version = "0.3.0", features = ["derive"] }
allow-until = "0.2.0"
slab = "0.4.9"
