[package]
name = "spwn-language"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
derive_more = "0.99.17"
itertools = "0.12.0"
lazy_static = "1.4.0"
slab = "0.4.9"
binary-heap-plus = "0.5.0"
colored = "2.1.0"
lyneate = "0.2.1"
delve = { version = "0.3.0", features = ["derive"] }
logos = "0.13.0"
lasso = "0.7.2"
regex = "1.10.2"
# replace_with = "0.1.7"
